# emdiro

./: Cargo.toml  README.md
src/: command.rs  grim.rs  key_codes.rs  main.rs  slurp.rs  ydotool.rs
