[package]
name = "emdiro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
image = "0.24.6"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
structopt = "0.3.26"
base64 = "0.21.0"
tempfile = "3.7.1"
